src/index.css
@import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
body {
  margin: 0;
  font-family: "Work Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
    "Helvetica Neue", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}
a {
  text-decoration: none;
  color: #c80c81;
}
*::-webkit-scrollbar {
  width: 0px;
}

.slider {
  width: 100%;
  height: 100%;
  border-radius: 21px;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  display: flex;
  overflow: hidden;
}
.slide {
  position: relative;
  min-width: 20%;
  height: 100%;
  transition: 0.5s;
  overflow: hidden;
}

@media only screen and (max-width: 950px) {
  .slide {
    display: flex;
    justify-content: center;
    position: relative;
    min-width: 100%;
    height: 100%;
    transition: 0.5s;
    overflow: hidden;
  }
}
.c--right {
  transform: translateY(-50%);
  height: 50px;
  width: 50px;
  background: none;
  border: 0;
}

.scrollcard::-webkit-scrollbar {
  display: none;
}

